fixing vertical alignment

--- a/style.css
+++ b/style.css
@@ -49,10 +49,6 @@ iframe {
 .title a {
   text-decoration: none;
   color: #3d3635;
-
-  /*background: -webkit-linear-gradient(#665a59, #3d3635);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;*/
 }
 
 @media only screen and (max-width: 300px)
@@ -163,16 +159,17 @@ iframe {
 }
 
 /* Desktop version */
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 1000px) {
   .topnav {
-    display: inline-block;
     background-color: #3d3635;
+    padding: 10px 30px 10px 30px;
+    width: 100%;
+    height: auto;
+
+    text-align: center;
+    display: inline-block;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
-    height: 60px;
-    text-align: center;
-    padding-top: 1%;
   }
 
   .main-nav {
@@ -182,19 +179,21 @@ iframe {
   }
 
   .main-nav li {
-    margin: 0;
+    padding: 5px 20px 5px 20px;
+    margin: 0px;
   }
 
   .nav-links {
-    width: 120px;
-    margin: 10px;
+    width: 100%;
     padding: 10px 30px 10px 30px;
+    margin: 0px;
   }
 
   .nav-links-clicked {
-    width: 120px;
-    margin: 10px;
+    width: 100%;
     padding: 10px 30px 10px 30px;
+    margin: 0px;
+
     pointer-events: none;
     cursor: default;
     text-decoration: none;
@@ -207,7 +206,6 @@ iframe {
     color: #f2f2f2;
     text-align: center;
     position: relative;
-    top: 4px;
   }
 
   .navbar-toggle {
